--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <h2>Enviar formulario</h2>
 
-        <form action="https://formsubmit.co/lojede4887@bizatop.com" method="POST"> <!--API para enviar correos de formularios-->
+        <form action="https://formsubmit.co/rodriguezbogotam@gmail.com" method="POST"> <!--API para enviar correos de formularios-->
             <label for="name">Nombre</label>
             <input type="text" name="name" id="name">
 
