--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
 
         <h2>Enviar formulario</h2>
 
-        <form action="https://formsubmit.co/rodriguezbogotam@gmail.com" method="POST"> <!--API para enviar correos de formularios-->
+        <form action="https://formsubmit.co/mrodrigguez8@gmail.com" method="POST"> <!--API para enviar correos de formularios-->
             <label for="name">Nombre</label>
             <input type="text" name="name" id="name">
 
             <label for="email">Escribe tu correo electronico aqui</label>
             <input type="email" name="email" id="email">
-
-            <label for="subject">Asunto</label>
-            <input type="text" name="subject" id="subject">
 
             <label for="coments">Escribre tu solicitud aqui</label>
             <textarea name="coments" id="coments" cols="30" rows="5"></textarea>
