--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
             <input class="btn" type="submit" value="Enviar">
 
+            <input type="hidden" name="_next" value="https://naxu218.github.io/formdemo/">
+
+            <input type="hidden" name="_captcha" value="false">
+
         </form>
 
     </div>
